kubernetes/nginx/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nbo-app
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-nehaad
          mountPath: /etc/nginx/conf.d/
        - name: nfs-wp
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-nehaad
        configMap:
          name: nginx-config
      - name: nfs-wp
        persistentVolumeClaim:
          claimName: nfs-pvc
