kubernetes/nginx/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: nginx.nehaad.com
      http:
        paths:
        - backend:
            serviceName: nginx-service
            servicePort: 80
